# Space-Invaders-in-C-

./: .gitignore  CMakeLists.txt  README.md
Source Code/: Aliens.cpp  Aliens.h  Boss.cpp  Boss.h  Bullets.cpp  Bullets.h  GameData.cpp  GameData.h  GameUtilities.cpp  GameUtilities.h  Obstacles.cpp  Obstacles.h  Spaceship.cpp  Spaceship.h  main.cpp
